# IoT

./: .gitignore
calibration/: CMakeLists.txt  calibration.cpp  calibration.h  main.cpp
robot/: camMatrix.xml  main.cpp
